# finder_test

./: finder.py  pyproject.toml  readme.md  tox.ini
nth_prime/: __init__.py  prime.py  tools.py
nth_prime/tests/: test_finder.py  test_prime.py
